fix repcontrol z-index

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -2665,7 +2665,7 @@ input.toggle-single-column-notes:checked ~ .background .repcontainer[data-groupn
 /*edit mode*/
 .ui-dialog .charsheet .repcontainer.editmode .repitem .itemcontrol {
     display: block;
-    z-index: 1;
+    z-index: 4;
 }
 
 /*Roll Templates*/
@@ -2707,7 +2707,7 @@ input.toggle-single-column-notes:checked ~ .background .repcontainer[data-groupn
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     box-shadow: 2px 4px 5px #000;
-    margin-top: -2em;
+    margin-top: -4.6em;
 }
 
 .sheet-rolltemplate-attacks .sheet-row,
